--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html>
-
-    <link id="css" rel="stylesheet" type="text/css" href="./CSS/TableStyle.default.css">
-    <script type="text/javascript" src="./Modules/SudokuDisplay.js"></script>
-
-    <script type="text/javascript" src="./Extensions/StringExtension.js"></script>
-    <script type="text/javascript" src="./Datas/SudokuSample.js"></script>
-
-    <table class='sudoku' id='sudoku_table1'/>
-    <script>
-        document.getElementById('sudoku_table1').innerHTML=SudokuDisplay.table(SudokuSample.done9x9)
-        document.getElementById('css').setAttribute('href','./CSS/TableStyle.done.css')
-    </script> 
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1; url=./modules/home/index.html">
+        <script type="text/javascript">
+            window.location.href = "./modules/home/index.html"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='./modules/home/index.html'>link</a>.
+    </body>
 </html>
