--- a/modules/helpers/tester/test.html
+++ b/modules/helpers/tester/test.html
@@ -6,7 +6,7 @@
     <div id="reports"/>
 
     <!--testing module-->
-    <script type="text/javascript" src="../State.js"></script>
+    <script type="text/javascript" src="../NumberHelpers.js"></script>
 
     <!--tester helper-->
     <script type="text/javascript" src="./Testcase.js"></script>
