--- a/modules/context/tester/test.html
+++ b/modules/context/tester/test.html
@@ -7,6 +7,9 @@
 
     <!--testing module-->
     <script type="text/javascript" src="../Context.js"></script>
+    <script type="text/javascript" src="./mockGetter.js"></script>
+    <script type="text/javascript" src="./mockChecker.js"></script>
+    <script type="text/javascript" src="./mockState.js"></script>
 
     <!--tester helper-->
     <script type="text/javascript" src="./Testcase.js"></script>
